<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    tools:context=".LevelsActivity">

    <TextView
        android:id="@+id/levelsTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/levels_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/easyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorYellow"
        android:drawableRight="@drawable/easy"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-black"
        android:padding="16dp"
        android:text="@string/levels_easy"
        android:textColor="#FAFAFA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mediumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorGreen"
        android:drawableRight="@drawable/student"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-black"
        android:padding="16dp"
        android:text="@string/levels_medium"
        android:textColor="#FAFAFA"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/hardButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorRed"
        android:drawableRight="@drawable/sensei"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-black"
        android:padding="16dp"
        android:text="@string/levels_hard"
        android:textColor="#FAFAFA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

</androidx.constraintlayout.widget.ConstraintLayout>