<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nextLevelButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".PlayActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/questionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/dot1"
            android:layout_width="10dp"
            android:layout_height="10dp"

            android:layout_marginRight="3dp"
            android:background="@drawable/circle"
            tools:layout_editor_absoluteX="264dp"
            tools:layout_editor_absoluteY="74dp" />

        <View
            android:id="@+id/dot2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/circle"
            tools:layout_editor_absoluteX="235dp"
            tools:layout_editor_absoluteY="74dp" />

        <View
            android:id="@+id/dot3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/circle"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="74dp" />

        <View
            android:id="@+id/dot4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/circle"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="74dp" />

        <View
            android:id="@+id/dot5"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginLeft="3dp"
            android:background="@drawable/circle"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="74dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/play_question_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/questionRectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/questionRectangle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/answerRectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/answerRectangle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_no_question"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/questionRectangle"
        app:layout_constraintEnd_toEndOf="@+id/questionRectangle"
        app:layout_constraintStart_toStartOf="@+id/questionRectangle"
        app:layout_constraintTop_toTopOf="@+id/questionRectangle" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:hint="@string/play_answer_x"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/answerRectangle"
        app:layout_constraintEnd_toEndOf="@+id/answerRectangle"
        app:layout_constraintStart_toStartOf="@+id/answerRectangle"
        app:layout_constraintTop_toTopOf="@+id/answerRectangle" />


    <LinearLayout
        android:id="@+id/AnswerRectangle"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerRectangle">

        <ImageView
            android:id="@+id/answerImage"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerRectangle"
            app:srcCompat="@drawable/sad_avatar" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="236dp"
            android:layout_height="82dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerImage" />

    </LinearLayout>

    <Button
        android:id="@+id/playNextLevelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorDarkBlue"
        android:drawableRight="@drawable/happy_plus_background"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-black"
        android:padding="16dp"
        android:text="@string/play_next_level"
        android:textColor="#FAFAFA"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/mediumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnswerRectangle" />

    <Button
        android:id="@+id/restartLevelButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounder_corners_blue"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/play_restart_level"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnswerRectangle" />

    <Button
        android:id="@+id/newChallengeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounder_corners_blue"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/play_new_question"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnswerRectangle" />

    <TextView
        android:id="@+id/playscreenScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="TextView"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/answerRectangle"
        app:layout_constraintEnd_toEndOf="@+id/answerRectangle"
        app:layout_constraintStart_toStartOf="@+id/answerRectangle"
        app:layout_constraintTop_toTopOf="@+id/answerRectangle" />


</androidx.constraintlayout.widget.ConstraintLayout>